add job detail annotation
